--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ title:               Samprita Test Site
 tagline:             'Experimenting with dark themes'
 description:         'oonlab is crafted with <3 by ariestiyansyah.'
 url:                 http://naringu.oonlab.com
-baseurl:             /
+baseurl:             /naringu
 paginate:            7
 
 # About/contact
